Bug fix for alignment of css grid in forecast

--- a/src/components/ForecastDisplay/ForecastDisplay.module.scss
+++ b/src/components/ForecastDisplay/ForecastDisplay.module.scss
@@ -10,6 +10,8 @@
     border-radius: 10px;
     max-width: 150px;
     margin: 0 auto;
+    max-height: 200px;
+    height: 100vh;
   }
   h6{
     margin: 20px auto;
@@ -42,8 +44,8 @@
 
 @media only screen and (min-width: 48em){
   .btn{
-    flex-basis: 20%;
-    max-width: 20%;
+    flex-basis: 16%;
+    max-width: 16%;
   }
 }
 
